# watchrun

./: README.md  debounce.py  process_line.py  pyproject.toml  watch.py
example/: ppp.py  qqq.py  runpq.py
watchact/: __init__.py  debounce.py
